@@ -30,7 +30,6 @@ import com.walmartlabs.concord.runtime.v2.sdk.Task;
 import com.walmartlabs.concord.svm.ThreadId;
 import org.immutables.value.Value;
 
-import javax.el.MethodNotFoundException;
 import javax.inject.Inject;
 import java.io.Serializable;
 import java.lang.annotation.Annotation;
@@ -52,22 +51,22 @@ public class TaskCallInterceptor {
 
     public <T> T invoke(CallContext ctx, Method method, Callable<T> callable) throws TaskException {
         // record the PRE event
-        TaskCallEvent preEvent = eventBuilder(Phase.PRE, method, ctx).build();
+        var preEvent = eventBuilder(Phase.PRE, method, ctx).build();
         listeners.forEach(l -> l.onEvent(preEvent));
 
         // call the callable and measure the duration
         T result = null;
         Exception error = null;
-        long startedAt = System.currentTimeMillis();
+        var startedAt = System.currentTimeMillis();
         try {
             result = callable.call();
         } catch (Exception e) {
             error = e;
         }
-        long duration = System.currentTimeMillis() - startedAt;
+        var duration = System.currentTimeMillis() - startedAt;
 
         // record the POST event
-        TaskCallEvent postEvent = eventBuilder(Phase.POST, method, ctx)
+        var postEvent = eventBuilder(Phase.POST, method, ctx)
                 .error(errorMessage(error))
                 .duration(duration)
                 .result(result instanceof Serializable ? (Serializable) result : null)
@@ -116,17 +115,17 @@ public class TaskCallInterceptor {
         @AllowNulls
         @Value.Default
         default List<Object> arguments() {
-            return Collections.emptyList();
+            return List.of();
         }
 
         @AllowNulls
         @Value.Default
         default List<List<Annotation>> annotations() {
-            return Collections.emptyList();
+            return List.of();
         }
 
         static Method of(Class<? extends Task> taskClass, String methodName, List<Object> params) throws javax.el.MethodNotFoundException {
-            List<List<Annotation>> annotations = Collections.emptyList();
+            List<List<Annotation>> annotations = List.of();
             var m = ReflectionUtil.findMethod(taskClass, methodName, null, params.toArray());
             if (m != null && !m.isVarArgs()) {
                 annotations = Arrays.stream(m.getParameterAnnotations())
